gcc/testsuite/gm2/iso/fail/badparam2.def
DEFINITION MODULE badparam2 ;

PROCEDURE foo (VAR c: CARDINAL) ;

END badparam2.
